стили шрифта и текста

--- a/index.html
+++ b/index.html
@@ -2,10 +2,158 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>test1</title>
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus eum exercitationem hic libero non. Consectetur cupiditate deleniti doloribus, earum esse excepturi impedit laudantium non numquam omnis placeat recusandae repellendus, vero.
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="Arial">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus at consequatur dignissimos earum excepturi id minus modi nostrum officiis perspiciatis! Adipisci beatae eaque esse hic obcaecati officia perferendis quis tenetur?</p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="fontsize40">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet commodi consectetur cum deserunt, ea eos et id in iure minus nihil non numquam perspiciatis porro quisquam ratione repudiandae, saepe.
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="italic">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus accusantium aliquam corporis cum distinctio, doloribus enim error expedita inventore itaque laborum maiores maxime, perferendis quam quia quo reiciendis tenetur vitae!
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="font700">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis cupiditate eaque recusandae saepe soluta temporibus totam? Aperiam aut est facere iusto libero non officia omnis possimus praesentium, quasi repellendus, voluptas?
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="fontred">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aspernatur aut consequatur debitis dignissimos dolores ea, eveniet illum labore laborum magni nesciunt nisi nulla omnis provident sapiente veritatis! Doloribus, ex.
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="textright">
+        Lorem ipsum dolor sit amet.
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="textcenter">
+        Lorem ipsum dolor sit amet.
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="textleft">
+        Lorem ipsum dolor sit amet.
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="textjustify">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto beatae debitis dolor dolorem, eos eveniet impedit laboriosam maiores natus officiis, qui, sint soluta totam! Eveniet fuga laboriosam officiis quam quis.
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="decor">
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci cumque dolor error excepturi explicabo illum inventore iusto neque nisi obcaecati pariatur quas quos, ratione repellat rerum sapiente, soluta tempora vel!
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="decor2">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci cumque dolor error excepturi explicabo illum inventore iusto neque nisi obcaecati pariatur quas quos, ratione repellat rerum sapiente, soluta tempora vel!
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="decor3">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci cumque dolor error excepturi explicabo illum inventore iusto neque nisi obcaecati pariatur quas quos, ratione repellat rerum sapiente, soluta tempora vel!
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="shadow">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci cumque dolor error excepturi explicabo illum inventore iusto neque nisi obcaecati pariatur quas quos, ratione repellat rerum sapiente, soluta tempora vel!
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="transform">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci cumque dolor error excepturi explicabo illum inventore iusto neque nisi obcaecati pariatur quas quos, ratione repellat rerum sapiente, soluta tempora vel!
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="transform2">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur cupiditate inventore, magnam mollitia nemo nesciunt obcaecati rem velit voluptas voluptatum. Adipisci aut id illum nam porro, totam ut vel voluptas?
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="transform3">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur cupiditate inventore, magnam mollitia nemo nesciunt obcaecati rem velit voluptas voluptatum. Adipisci aut id illum nam porro, totam ut vel voluptas?
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="indent">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dignissimos error facere illo in iure minus nihil quos sed voluptas. Ad animi atque magnam magni reiciendis. Molestiae omnis possimus voluptas.
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="lspace">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dignissimos error facere illo in iure minus nihil quos sed voluptas. Ad animi atque magnam magni reiciendis. Molestiae omnis possimus voluptas.
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="wspace">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, error inventore ipsa nostrum officiis ratione. Ad aut fugit ipsa ipsam itaque, labore, libero modi necessitatibus porro quod, quos sit soluta.
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="whitespace">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, error inventore ipsa nostrum officiis ratione. Ad aut fugit ipsa ipsam itaque, labore, libero modi necessitatibus porro quod, quos sit soluta.
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="lineheight">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquam, deleniti deserunt, eaque earum esse et illo iste obcaecati, pariatur provident quam reiciendis tempora ut veniam. Aut debitis recusandae velit?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, error inventore ipsa nostrum officiis ratione. Ad aut fugit ipsa ipsam itaque, labore, libero modi necessitatibus porro quod, quos sit soluta.
+    </p>
 
 </body>
 </html>
